fix: add checkbox toggle for container visibility with hidden class

--- a/planapp/appstyle.css
+++ b/planapp/appstyle.css
@@ -776,12 +776,7 @@ nav.static {
 .nav-container input[type="checkbox"]:checked ~ .menu-items {
   transform: translate(-10vw);
 }
-nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container,
-nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container .left,
-nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container .right,
-nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container .add-event-btn{ 
-  display: none !important;
-}
+
 .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
   transform: rotate(45deg);
 }
@@ -802,4 +797,8 @@ h1 {
   strong{
       color: var(--color-red-1);
   }
+}
+
+.hidden {
+  display: none !important;
 }
